k8s/_generated/apps/walnuts-dev-www-redirect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walnuts-dev-www-redirect
spec:
  ingressClassName: "nginx"
  rules:
  - host: "www.walnuts.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: walnuts-dev-www-redirect
            port:
              number: 8080
